[package]
name = "fetch-service"
version = "0.1.0"
authors = ["Vish Vishvanath <184423+vishvish@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.13"
reqwest = { version = "0.11.1", features = ["json"] }
chrono = "0.4.19"
log = "0.4.*"
http = "0.2"
pretty_env_logger = "0.4"
thiserror = "1"
